Revert unnecessary change.